--- a/index.html
+++ b/index.html
@@ -10,49 +10,70 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <!-- <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png"> -->
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- Style -->
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
-    <main>
-        <!-- HEADER -->
-        <header class="header">
-            <div class="content">
-                <nav class="navbar">
-                    <!-- Logo -->
-                    <img src="./assets/img/Logo.svg" alt="Besnik">
+    <!-- HEADER -->
+    <header class="header">
+        <div class="content">
+            <nav class="navbar">
+                <!-- Logo -->
+                <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik"></a>
 
-                    <!-- Navigation -->
-                    <ul>
-                        <li><a href="!#">Home</a></li>
-                        <li><a href="!#">Features</a></li>
-                        <li><a href="!#">Services</a></li>
-                        <li><a href="!#">Resources</a></li>
-                        <li><a href="!#">Contact</a></li>
-                    </ul>
+                <!-- Navigation -->
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#resources">Resources</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
 
-                    <!-- Action -->
-                    <div class="actions">
-                        <a href="" class="action-link">Sign in</a>
-                        <a href="" class="btn action-btn">Sign up</a>
-                    </div>
-                </nav>
-
-                <div class="hero">
-                    <div class="info">
-                        <p class="sub-title">Welcome to Besnik Agency</p>
-                        <h1 class="title">Discover a place
-                            you'll love to live.</h1>
-                        <p class="desc">Get the best real estate deals first,
-                            before they hit the mass market! Hot foreclosure deals with one simple search.</p>
-                        <a href="#!" class="btn hero-cta">More About Us</a>
-                    </div>
-
-                    <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
+                <!-- Action -->
+                <div class="actions">
+                    <a href="#!" class="action-link">Sign in</a>
+                    <a href="#!" class="btn action-btn">Sign up</a>
                 </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <!-- HERO -->
+        <div class="hero">
+            <div class="content">
+                <div class="info">
+                    <p class="sub-title">Welcome to Besnik Agency</p>
+                    <h1 class="title">Discover a place
+                        you'll love to live.</h1>
+                    <p class="desc">Get the best real estate deals first,
+                        before they hit the mass market! Hot foreclosure deals with one simple search.</p>
+                    <a href="#!" class="btn hero-cta">More About Us</a>
+                </div>
+
+                <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
             </div>
-        </header>
+        </div>
 
         <!-- CLIENTS -->
         <div class="clients">
@@ -72,21 +93,32 @@
                 </div>
 
                 <div class="image">
-                    <img src="./assets/img/client-1.svg" alt="clients">
-                    <img src="./assets/img/client-2.svg" alt="clients">
-                    <img src="./assets/img/client-3.svg" alt="clients">
-                    <img src="./assets/img/client-4.svg" alt="clients">
-                    <img src="./assets/img/client-5.svg" alt="clients">
+                    <a href="#!">
+                        <img src="./assets/img/client-1.svg" alt="clients">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-2.svg" alt="clients">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-3.svg" alt="clients">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-4.svg" alt="clients">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/img/client-5.svg" alt="clients">
+                    </a>
                 </div>
             </div>
         </div>
 
         <!-- GUIDES -->
-        <div class="guides">
+        <div class="guides" id="services">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
-                <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one place.</p>
-            
+                <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
+                    place.</p>
+
                 <!-- LIST GUIDES -->
                 <ul class="list-guide">
                     <li class="guide-item">
@@ -122,7 +154,7 @@
         </div>
 
         <!-- FEATURES -->
-        <div class="features">
+        <div class="features" id="features">
             <div class="content">
                 <!-- HEADER -->
                 <header>
@@ -188,11 +220,11 @@
         </div>
 
         <!-- STATS -->
-        <div class="stats">
+        <div class="stats" id="resources">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
-                        <img src="./assets/img/stas-img.jpg" alt="" class="image"/>
+                        <img src="./assets/img/stas-img.jpg" alt="" class="image" />
                         <div class="stats-trend">
                             <div class="row">
                                 <strong class="value">40,000+</strong>
@@ -240,7 +272,8 @@
                     <div class="info">
                         <h2 class="sub-title">You've found a neighborhood you love.</h2>
                         <p class="desc">
-                            When you own a home, you're committing to living in one location for a while. In a recent Trulia survey, 
+                            When you own a home, you're committing to living in one location for a while. In a recent
+                            Trulia survey,
                             we found that five out of six respondents said finding the right neighborhood
                         </p>
                     </div>
@@ -264,20 +297,21 @@
             </div>
         </div>
 
-    <!-- SUBCRIPTION -->
-    <div class="subcription">
-        <div class="content">
-            <div class="body">
-                <div class="info">
-                    <h2 class="sub-title line-clamp">Subscribe to our Newsletter!</h2>
-                    <p class="desc line-clamp">Subscribe to our newsletter and stay updated.</p>
-                    <a href="" class="btn">Subscribe</a>
+        <!-- SUBCRIPTION -->
+        <div class="subcription" id="contact">
+            <div class="content">
+                <div class="body">
+                    <div class="info">
+                        <h2 class="sub-title line-clamp">Subscribe to our Newsletter!</h2>
+                        <p class="desc line-clamp">Subscribe to our newsletter and stay updated.</p>
+                        <a href="#!" class="btn">Subscribe</a>
+                    </div>
+                    <img src="./assets/img/newletter.svg" alt="" class="image">
                 </div>
-                <img src="./assets/img/newletter.svg" alt="" class="image">
             </div>
         </div>
-    </div>
 
+    </main>
     <!-- FOOTER -->
     <footer class="footer">
         <div class="content">
@@ -286,16 +320,16 @@
                     <h3 class="heading">Product</h3>
                     <ul class="list">
                         <li class="item">
-                            <a href="">Listing</a>
+                            <a href="#!">Listing</a>
                         </li>
                         <li class="item">
-                            <a href="">Property</a>
+                            <a href="#!">Property</a>
                         </li>
                         <li class="item">
-                            <a href="">Agents</a>
+                            <a href="#!">Agents</a>
                         </li>
                         <li class="item">
-                            <a href="">Blog</a>
+                            <a href="#!">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -303,16 +337,16 @@
                     <h3 class="heading">Resources</h3>
                     <ul class="list">
                         <li class="item">
-                            <a href="">Our Homes</a>
+                            <a href="#!">Our Homes</a>
                         </li>
                         <li class="item">
-                            <a href="">Member Stories</a>
+                            <a href="#!">Member Stories</a>
                         </li>
                         <li class="item">
-                            <a href="">Video</a>
+                            <a href="#!">Video</a>
                         </li>
                         <li class="item">
-                            <a href="">Free trial</a>
+                            <a href="#!">Free trial</a>
                         </li>
                     </ul>
                 </div>
@@ -320,16 +354,16 @@
                     <h3 class="heading">Company</h3>
                     <ul class="list">
                         <li class="item">
-                            <a href="">Patnerships</a>
+                            <a href="#!">Patnerships</a>
                         </li>
                         <li class="item">
-                            <a href="">Terms of use</a>
+                            <a href="#!">Terms of use</a>
                         </li>
                         <li class="item">
-                            <a href="">Privacy</a>
+                            <a href="#!">Privacy</a>
                         </li>
                         <li class="item">
-                            <a href="">Sitemap</a>
+                            <a href="#!">Sitemap</a>
                         </li>
                     </ul>
                 </div>
@@ -337,13 +371,13 @@
                     <h3 class="heading">Get in touch</h3>
                     <p class="desc">You'll find your next home, in any style you prefer.</p>
                     <div class="socials">
-                        <a href="" class="social-link">
+                        <a href="#!" class="social-link">
                             <img src="./assets/img/facebook.svg" alt="">
                         </a>
-                        <a href="" class="social-link">
+                        <a href="#!" class="social-link">
                             <img src="./assets/img/twitter.svg" alt="">
                         </a>
-                        <a href="" class="social-link">
+                        <a href="#!" class="social-link">
                             <img src="./assets/img/linkedin.svg" alt="">
                         </a>
                     </div>
@@ -355,6 +389,6 @@
             </div>
         </div>
     </footer>
-    </main>
 </body>
+
 </html>
