finish responsive for tablet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,23 +32,36 @@
     <!-- Style -->
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 
 <body>
-    <!-- HEADER -->
+    <!-- PC HEADER -->
     <header class="header">
         <div class="content">
             <nav class="navbar">
+                <!-- Tablet and Mobile menu -->
+                <label for="menu-checkbox" class="toggle-menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                        <path
+                            fill="currentColor"
+                            d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                    </svg>
+                </label>
+
                 <!-- Logo -->
-                <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik"></a>
+                <a href="#" class="logo"><img src="./assets/img/Logo.svg" alt="Besnik"></a>
 
                 <!-- Navigation -->
-                <ul>
+                <ul id="pc-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#resources">Resources</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li class="show-on-mobile seperate"><a href="#!">Sign In</a></li>
+                    <li class="show-on-mobile"><a href="#!">Sign Up</a></li>
                 </ul>
 
                 <!-- Action -->
@@ -58,6 +72,28 @@
             </nav>
         </div>
     </header>
+
+    <!-- TABLET AND MOBILE HEADER -->
+     <header class="mobile-header">
+        <input type="checkbox" name="" id="menu-checkbox" class="menu-checkbox" hidden>
+
+        <!-- Overlay -->
+        <label for="menu-checkbox" class="menu-overlay"></label>
+
+        <!-- Menu Content -->
+        <div class="menu-drawer">
+            <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik"></a>
+            <!-- Navigation -->
+            <ul id="mobile-nav"></ul>
+            <script>
+                const pcNav = document.querySelector('#pc-nav');
+                const mobileNav = document.querySelector('#mobile-nav');
+                // Copy from PC NAV to Mobile Nav
+                mobileNav.innerHTML = pcNav.innerHTML;
+            </script>
+        </div>
+     </header>
+
     <main>
         <!-- HERO -->
         <div class="hero">
@@ -384,7 +420,7 @@
                 </div>
             </div>
             <div class="row row-bottom">
-                <img src="./assets/img/Logo.svg" alt="Besnik" class="logo">
+                <img src="./assets/img/Logo.svg" alt="Besnik" class="logo__footer">
                 <p class="copyright">Copyright 2020.com, All rights reserved.</p>
             </div>
         </div>
