--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="row row-desc">
                     <p class="desc">More than 45,000+ companies trust besnik</p>
-                    <p class="desc">5 Star Ratings (2k+ Review)</p>
+                    <p class="desc hide-on-mobile">5 Star Ratings (2k+ Review)</p>
                 </div>
 
                 <div class="image">
@@ -251,6 +251,12 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="view-all">
+                    <a href="#!" class="btn show-on-mobile">
+                        <span>View All Properties</span>
+                    </a>
                 </div>
             </div>
         </div>
